fix(UI): Fix dialog dragging on mobile

--- a/app/src/ui/components/Dialog/Dialog.css
+++ b/app/src/ui/components/Dialog/Dialog.css
@@ -14,7 +14,7 @@
     height: 100svh;
     padding-bottom: 5svh !important;
 
-    --offset-top: 0;
+    --offset-top: calc(env(safe-area-inset-top, 0) / 2);
     --scale: calc(1 - 0.03 * var(--nested-dialogs));
     --backdrop-opacity: 1;
 
@@ -67,11 +67,11 @@
         }
 
         &:has(.dialog.is-modal[open]) main {
-            transform: perspective(100px) translateZ(-5px);
+            transform: perspective(100px) translatez(-5px);
         }
 
         &:has(.dialog.is-modal[data-state="closing"]) main {
-            transform: perspective(100px) translateZ(0px);
+            transform: perspective(100px) translatez(0px);
         }
     }
 }
@@ -123,7 +123,7 @@
     left: 0;
     top: -0.5lh;
     width: 100%;
-    height: calc(2.5lh + env(safe-area-inset-top, 0));
+    height: 2.5lh;
     touch-action: none;
     z-index: 100;
 }
